--- a/code.html
+++ b/code.html
@@ -20,11 +20,50 @@
         </header>
 
         <main>
+            <section>
+                <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+                <div>
+                    <form method="post" action="#">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <input type="search" name="recherche" placeholder="Marseille, France"/>
+                        <input type="submit" value="Rechercher"/>
+                    </form>
+                </div>
+                <div>
+                    <p> Filtres </p>
+                    <div>
+                        <i class="fas fa-money-bill-wave"></i>
+                        <p> Economique </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-child"></i>
+                        <p> Familial </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-heart"></i>
+                        <p> Romantique </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-dog"></i>
+                        <p> Animaux autorisés </p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-info"></i>
+                    <p> Plus de 500 logements sont disponibles dans cette ville </p>
+                </div>
+            </section>
+            <section>
 
+            </section>
+            <article>
+
+            </article>
         </main>
 
         <footer>
-
+            
         </footer>
 
     </body>
