--- a/code.html
+++ b/code.html
@@ -8,6 +8,8 @@
     </head>
     <body>
 
+<!-- en-tête -->
+
         <header>
             <img src="images/logo/Reservia@3x.png" alt="logo" />
             <nav>
@@ -20,6 +22,9 @@
         </header>
 
         <main>
+
+<!-- haut du corps de page : recherche, filtres -->
+
             <section>
                 <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
@@ -54,8 +59,133 @@
                     <p> Plus de 500 logements sont disponibles dans cette ville </p>
                 </div>
             </section>
-            <section>
 
+<!-- partie du milieu : "hébergements" et "les plus populaires" -->
+
+            <section>
+                <article>
+                    <h1> Hébergements à Marseille </h1>
+                    <div>
+                        <div>
+                            <img src="images/hebergements/4_small/auberge-cannebiere.jpg" alt="auberge de la cannebiere" />
+                            <h2> Auberge de la Cannebière </h2>
+                            <p> Nuit à partir de <strong>25€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-port.jpg" alt="hotel du port" />
+                            <h2> Hôtel du port </h2>
+                            <p> Nuit à partir de <strong>52€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-mouettes.jpg" alt="hotel les mouettes" />
+                            <h2> Hôtel Les mouettes </h2>
+                            <p> Nuit à partir de <strong>76€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-mer.jpg" alt="hotel de la mer" />
+                            <h2> Hôtel de la mer </h2>
+                            <p> Nuit à partir de <strong>46€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/auberge-panier.jpg" alt="auberge le panier" />
+                            <h2> Auberge Le Panier </h2>
+                            <p> Nuit à partir de <strong>23€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-amina.jpg" alt="hotel chez amina" />
+                            <h2> Hôtel chez Amina </h2>
+                            <p> Nuit à partir de <strong>96€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p> Afficher plus </p>
+                </article>
+                <aside>
+                    <div>
+                        <h1>Les plus populaires</h1>
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-soleil.jpg" alt="hotel le soleil du matin" />
+                            <h2> Hôtel Le soleil du matin </h2>
+                            <p> Nuit à partir de <strong>128€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/chambre-hotes.jpg" alt="au coeur de l'eau" />
+                            <h2> Au coeur de l'eau </br> Chambres d'hôtes </h2>
+                            <p> Nuit à partir de <strong>71€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc" />
+                            <h2> Hôtel Tout bleu et Blanc </h2>
+                            <p> Nuit à partir de <strong>68€</strong></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
+                
             </section>
             <article>
 
