Ajout de la section activités

--- a/code.html
+++ b/code.html
@@ -187,8 +187,41 @@
                 </aside>
                 
             </section>
-            <article>
 
+<!-- partie du bas : activités -->
+
+            <article>
+                <h1> Activités à Marseille </h1>
+                <div>
+                    <div>
+                        <img src="images/activites/4_small/vieux-port.jpg" alt="le vieux port">
+                        <h2> Vieux port </h2>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
+                            <h2> Fort de Pomègues </h2>
+                        </div>
+                        <div>
+                            <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
+                            <h2> Îles du Frioul </h2>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
+                        <h2> Parc National des Calanques</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
+                            <h2> Notre-Dame-de-la-Garde </h2>
+                        </div>
+                        <div>
+                            <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
+                            <h2> Parc Longchamp </h2>
+                        </div>
+                    </div>
+                </div>
             </article>
         </main>
 
