--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
 <!-- en-tête -->
 
         <header>
-            <img src="images/logo/Reservia@3x.png" alt="logo" />
+            <img src="images/logo/Reservia@3x.png" alt="logo" id="logo"/>
             <nav>
                 <ul>
                     <li>Hébergements</li>
