--- a/code.html
+++ b/code.html
@@ -35,26 +35,26 @@
                         <input type="submit" value="Rechercher"/>
                     </form>
                 </div>
-                <div>
+                <div id="filtres">
                     <p> Filtres </p>
-                    <div>
+                    <div class="filtre">
                         <i class="fas fa-money-bill-wave"></i>
                         <p> Economique </p>
                     </div>
-                    <div>
+                    <div class="filtre">
                         <i class="fas fa-child"></i>
                         <p> Familial </p>
                     </div>
-                    <div>
+                    <div class="filtre">
                         <i class="fas fa-heart"></i>
                         <p> Romantique </p>
                     </div>
-                    <div>
+                    <div class="filtre">
                         <i class="fas fa-dog"></i>
                         <p> Animaux autorisés </p>
                     </div>
                 </div>
-                <div>
+                <div id="info">
                     <i class="fas fa-info"></i>
                     <p> Plus de 500 logements sont disponibles dans cette ville </p>
                 </div>
