Mise en forme des icônes

--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li>Hébergements</li>
                     <li>Activités</li>
-                    <li>S'inscrire</li>
+                    <li style="color:rgb(0, 119, 255);"><strong>S'inscrire</strong></li>
                 </ul>
             </nav>
         </header>
@@ -28,30 +28,30 @@
             <section>
                 <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <div>
+                <div id="barre-recherche">
                     <form method="post" action="#">
                         <i class="fas fa-map-marker-alt" style="color: black"></i>
-                        <input type="search" name="recherche" placeholder="Marseille, France"/>
-                        <input type="submit" value="Rechercher"/>
+                        <input type="search" name="recherche" placeholder="Marseille, France" id="barre-saisie"/>
+                        <input type="submit" value="Rechercher" id="bouton-rechercher"/>
                     </form>
                 </div>
                 <div id="filtres">
-                    <p> Filtres </p>
+                    <p><strong> Filtres </strong></p>
                     <div class="filtre">
                         <i class="fas fa-money-bill-wave"></i>
-                        <p> Economique </p>
+                        <p><strong> Economique </strong></p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-child"></i>
-                        <p> Familial </p>
+                        <p><strong> Familial </strong></p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-heart"></i>
-                        <p> Romantique </p>
+                        <p><strong> Romantique </strong></p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-dog"></i>
-                        <p> Animaux autorisés </p>
+                        <p><strong> Animaux autorisés </strong></p>
                     </div>
                 </div>
                 <div id="info">
