Mise en forme de la section activités

--- a/code.html
+++ b/code.html
@@ -36,22 +36,22 @@
                     </form>
                 </div>
                 <div id="filtres">
-                    <p><strong> Filtres </strong></p>
+                    <p> Filtres </p>
                     <div class="filtre">
                         <i class="fas fa-money-bill-wave"></i>
-                        <p><strong> Economique </strong></p>
+                        <p> Economique </p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-child"></i>
-                        <p><strong> Familial </strong></p>
+                        <p> Familial </p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-heart"></i>
-                        <p><strong> Romantique </strong></p>
+                        <p> Romantique </p>
                     </div>
                     <div class="filtre">
                         <i class="fas fa-dog"></i>
-                        <p><strong> Animaux autorisés </strong></p>
+                        <p> Animaux autorisés </p>
                     </div>
                 </div>
                 <div id="info">
@@ -212,34 +212,34 @@
 
             <article>
                 <h1> Activités à Marseille </h1>
-                <div>
-                    <div>
+                <div id="activites">
+                    <figure class="figure-verticale">
                         <img src="images/activites/4_small/vieux-port.jpg" alt="le vieux port">
-                        <h2> Vieux port </h2>
-                    </div>
-                    <div>
-                        <div>
+                        <figcaption> Vieux port </figcaption>
+                    </figure>
+                    <div class="figure-horizontale">
+                        <figure>
                             <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
-                            <h2> Fort de Pomègues </h2>
-                        </div>
-                        <div>
+                            <figcaption> Fort de Pomègues </figcaption>
+                        </figure>
+                        <figure>
                             <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
-                            <h2> Îles du Frioul </h2>
-                        </div>
+                            <figcaption> Îles du Frioul </figcaption>
+                        </figure>
                     </div>
-                    <div>
+                    <figure class="figure-verticale">
                         <img src="images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
-                        <h2> Parc National des Calanques</h2>
-                    </div>
-                    <div>
-                        <div>
+                        <figcaption> Parc National des Calanques</figcaption>
+                    </figure>
+                    <div class="figure-horizontale">
+                        <figure>
                             <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
-                            <h2> Notre-Dame-de-la-Garde </h2>
-                        </div>
-                        <div>
+                            <figcaption> Notre-Dame-de-la-Garde </figcaption>
+                        </figure>
+                        <figure>
                             <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
-                            <h2> Parc Longchamp </h2>
-                        </div>
+                            <figcaption> Parc Longchamp </figcaption>
+                        </figure>
                     </div>
                 </div>
             </article>
