Ajout des liens cliquables et correction des couleurs

--- a/code.html
+++ b/code.html
@@ -14,9 +14,9 @@
             <img src="images/logo/Reservia@3x.png" alt="logo" id="logo"/>
             <nav>
                 <ul>
-                    <li>Hébergements</li>
-                    <li>Activités</li>
-                    <li style="color:rgb(0, 119, 255);"><strong>S'inscrire</strong></li>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites-marseille">Activités</a></li>
+                    <li style="color:#0065FC;"><strong>S'inscrire</strong></li>
                 </ul>
             </nav>
         </header>
@@ -66,6 +66,7 @@
                 <article id="hebergements">
                     <h1> Hébergements à Marseille </h1>
                     <div class="logements">
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/auberge-cannebiere.jpg" alt="auberge de la cannebiere" />
                             <div class="description">
@@ -80,6 +81,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/hotel-port.jpg" alt="hotel du port" />
                             <div class="description">
@@ -94,6 +97,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/hotel-mouettes.jpg" alt="hotel les mouettes" />
                             <div class="description">
@@ -108,6 +113,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/hotel-mer.jpg" alt="hotel de la mer" />
                             <div class="description">
@@ -122,6 +129,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/auberge-panier.jpg" alt="auberge le panier" />
                             <div class="description">
@@ -136,6 +145,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/hotel-amina.jpg" alt="hotel chez amina" />
                             <div class="description">
@@ -150,6 +161,7 @@
                             </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <p><strong> Afficher plus </strong></p>
                 </article>
@@ -159,6 +171,7 @@
                         <i class="fas fa-chart-line" style="color: black"></i>
                     </div>
                     <div id="populaires">
+                        <a href="#">
                         <div class="populaire">
                             <img src="images/hebergements/4_small/hotel-soleil.jpg" alt="hotel le soleil du matin" />
                             <div class="description-2">
@@ -174,6 +187,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="populaire">
                             <img src="images/hebergements/4_small/chambre-hotes.jpg" alt="au coeur de l'eau" />
                             <div class="description-2">
@@ -188,6 +203,8 @@
                             </div>
                             </div>
                         </div>
+                        </a>
+                        <a href="#">
                         <div class="populaire">
                             <img src="images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc" />
                             <div class="description-2">
@@ -203,6 +220,7 @@
                             </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </aside>
                 
@@ -210,36 +228,48 @@
 
 <!-- partie du bas : activités -->
 
-            <article>
+            <article id="activites-marseille">
                 <h1> Activités à Marseille </h1>
                 <div id="activites">
+                    <a href="#">
                     <figure class="figure-verticale">
                         <img src="images/activites/4_small/vieux-port.jpg" alt="le vieux port">
                         <figcaption> Vieux port </figcaption>
                     </figure>
+                    </a>
                     <div class="figure-horizontale">
+                        <a href="#">
                         <figure>
                             <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
                             <figcaption> Fort de Pomègues </figcaption>
                         </figure>
+                        </a>
+                        <a href="#">
                         <figure>
                             <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
                             <figcaption> Îles du Frioul </figcaption>
                         </figure>
+                        </a>
                     </div>
+                    <a href="#">
                     <figure class="figure-verticale">
                         <img src="images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
                         <figcaption> Parc National des Calanques</figcaption>
                     </figure>
+                    </a>
                     <div class="figure-horizontale">
+                        <a href="#">
                         <figure>
                             <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
                             <figcaption> Notre-Dame-de-la-Garde </figcaption>
                         </figure>
+                        </a>
+                        <a href="#">
                         <figure>
                             <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
                             <figcaption> Parc Longchamp </figcaption>
                         </figure>
+                        </a>
                     </div>
                 </div>
             </article>
@@ -249,7 +279,7 @@
 
         <footer>
             <div>
-                <h2>A propos</h2>
+                <h3>A propos</h3>
                 <ul>
                     <li>Fonctionnement du site</li>
                     <li>Conditions générales de vente</li>
@@ -257,14 +287,14 @@
                 </ul>
             </div>
             <div>
-                <h2>Nos hébergements</h2>
+                <h3>Nos hébergements</h3>
                 <ul>
                     <li>Charte qualité</li>
                     <li>Soumettre votre hôtel</li>
                 </ul>
             </div>
             <div>
-                <h2>Assistance</h2>
+                <h3>Assistance</h3>
                 <ul>
                     <li>Centre d'aide</li>
                     <li>Nous contacter</li>
