Début de passage en responsive

--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="#hebergements">Hébergements</a></li>
                     <li><a href="#activites-marseille">Activités</a></li>
-                    <li style="color:#0065FC;"><strong>S'inscrire</strong></li>
+                    <li><a href="#"><strong>S'inscrire</strong></a></li>
                 </ul>
             </nav>
         </header>
@@ -32,7 +32,8 @@
                     <form method="post" action="#">
                         <i class="fas fa-map-marker-alt" style="color: black"></i>
                         <input type="search" name="recherche" placeholder="Marseille, France" id="barre-saisie"/>
-                        <input type="submit" value="Rechercher" id="bouton-rechercher"/>
+                        <input type="submit" value="Rechercher" id="bouton-rechercher-desktop"/>
+                        <input type="submit" value=" " id="bouton-rechercher-mobile"/>
                     </form>
                 </div>
                 <div id="filtres">
